--- a/index.html
+++ b/index.html
@@ -31,6 +31,6 @@
     <br><br><br>
     « les mathématiques ne sont pas encore prêtes pour de tels problèmes.» <span class="bolded">-Paul Erdős</span></p>
 
-    <a href="syrracuse.html"><input type="submit" value="Essayons"/></a>
+    <a href="syracuse.html"><input type="submit" value="Essayons"/></a>
 </body>
 </html>
