--- a/syracuse.html
+++ b/syracuse.html
@@ -7,7 +7,7 @@
   <meta content="text/html; charset=utf-8" />
 </head>
 <body>
-<h1 class="mainTitle">La suite de Sirracuse</h1>
+<h1 class="mainTitle">La suite de Syracuse</h1>
 <span class="flex-container">
   <p class="flex-item1">Veuillez entrez un chiffre de départ duquel partir pour generer une suite de Syracuse :</p>
   <form class="flex-item2">
@@ -27,6 +27,7 @@
       <tbody id="targetbodyRes">
       </tbody>
   <p id="resultat"class="flex-item3">La suite de Syracuse est donc : <br><span id="suite"></span></p>
+  <p id="Ev'rybody Wants to Be a Cat" class="flex-itemCat"></p>
   <script src="js/func-tableauResultat.js"></script>
   <script src="js/func-syracuse.js"></script>
 </span>
