--- a/cat.html
+++ b/cat.html
@@ -2,9 +2,15 @@
 <html lang="fr">
 <head>
     <title>Suite de Syracuse - CAT</title>
+    <link href="style/general.css" rel="stylesheet">
+    <link href="style/flex.css" rel="stylesheet">
+    <link href="style/font.css" rel="stylesheet">
     <meta content="text/html; charset=utf-8" />
 </head>
 <body>
+    <p class="catTitle">Votre récompense</p>
+    <div id="catpic"></div>
+    <p class="catsubTitle">Merci https://thecatapi.com/</p>
 <script src="js/func-APIfetcher.js"></script>
 </body>
 </html>
