--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
   <title>Suite de Sirracuse</title>
   <link href="style/general.css" rel="stylesheet">
+  <link href="style/flex.css" rel="stylesheet">
+  <link href="style/font.css" rel="stylesheet">
   <meta content="text/html; charset=utf-8" />
 </head>
 <body>
