--- a/syracuse.html
+++ b/syracuse.html
@@ -4,9 +4,10 @@
   <title>Suite de Syracuse</title>
   <link href="style/general.css" rel="stylesheet">
   <link href="style/flex.css" rel="stylesheet">
+  <link href="style/font.css" rel="stylesheet">
   <meta content="text/html; charset=utf-8" />
 </head>
-<body>
+<body class="syracuseBody">
 <h1 class="mainTitle">La suite de Syracuse</h1>
 <span class="flex-container">
   <p class="flex-item1">Veuillez entrez un chiffre de départ duquel partir pour generer une suite de Syracuse :</p>
