--- a/index.html
+++ b/index.html
@@ -8,31 +8,47 @@
   <meta content="text/html; charset=utf-8" />
 </head>
 <body>
-<h1 class="mainTitle">La suite de Sirracuse</h1>
-<p>La conjecture de Syracuse (ou problème 3x + 1), est l'hypothèse mathématique selon laquelle la suite de Syracuse de n'importe quel entier strictement positif atteint 1. 
-    <br><br>
-    Une suite de Syracuse est une suite d'entiers naturels définie de la manière suivante : 
-    <ul>
-        <li>on part d'un nombre entier strictement positif</li>
-        <li>s’il est pair, on le divise par 2</li>
-        <li>s’il est impair, on le multiplie par 3 et l'on ajoute 1</li>
-        <li> En repetant l’opération, on obtient une suite d'entiers strictement positifs dont chacun ne dépend que de son prédécesseur.</li>
-    </ul>
-
-    Par exemple, la suite de Sirracuse du nombre 14 est : 14, 7, 22, 11, 34, 17, 52, 26, 13, 40, 20, 10, 5, 16, 8, 4, 2, 1, 4, 2…
-    <br>
-    Après que le nombre 1 a été atteint, la suite des valeurs 1, 4, 2, 1, 4, 2… se répète indéfiniment en un cycle de longueur 3, appelé <span class="bolded">cycle trivial.</span>
-    <br><br>
-    Si l'on était parti d'un autre entier naturel, en lui appliquant les mêmes règles, on aurait obtenu une suite de nombres différente.
-    <br>
-    A priori, il serait possible que la suite de Syracuse de certaines valeurs de départ n'atteigne jamais la valeur 1, soit qu'elle aboutisse à un cycle différent du cycle trivial, soit qu'elle diverge vers l'infini. 
-    <br>
-    Or, on n'a jamais trouvé d'exemple de suite obtenue suivant les règles données qui n'aboutisse pas à 1, puis au cycle trivial.
-    <br><br>
-    En dépit de la simplicité de son énoncé, cette conjecture défie depuis de nombreuses années les mathématiciens. 
-    <br><br><br>
-    « les mathématiques ne sont pas encore prêtes pour de tels problèmes.» <span class="bolded">-Paul Erdős</span></p>
-    
-    <a href="syracuse.html"><input type="submit" value="Essayons"/></a>
+<h1 class="mainTitle">La suite de Syracuse</h1>
+<span class="flex-container-i">
+  <article class="a-definition">
+    <h3 class="subTitle" id="sub1">Definition</h3>
+    <p class="definition">La conjecture de Syracuse (ou problème 3x + 1), est l'hypothèse mathématique selon laquelle la suite de Syracuse de n'importe quel entier strictement positif atteint 1.</p>
+  </article>
+  <article class="a-principes">
+    <h3 class="subTitle" id="sub2">Principes</h3>
+    <p class="principes">  
+      Une suite de Syracuse est une suite d'entiers naturels définie de la manière suivante : 
+      <ul class="principes">
+          <li>on part d'un nombre entier strictement positif</li>
+          <li>s’il est pair, on le divise par 2</li>
+          <li>s’il est impair, on le multiplie par 3 et l'on ajoute 1</li>
+          <li> En repetant l’opération, on obtient une suite d'entiers strictement positifs dont chacun ne dépend que de son prédécesseur.</li>
+      </ul>
+    </p>
+  </article >
+  <article class="a-exemples">
+    <h3 class="subTitle" id="sub3">Exemples</h3>
+    <p class="exemples">
+      Par exemple, la suite de Sirracuse du nombre 14 est : 14, 7, 22, 11, 34, 17, 52, 26, 13, 40, 20, 10, 5, 16, 8, 4, 2, 1, 4, 2…
+      <br><br>
+      Après que le nombre 1 a été atteint, la suite des valeurs 1, 4, 2, 1, 4, 2… se répète indéfiniment en un cycle de longueur 3, appelé <span class="bolded">cycle trivial.</span>
+      <br><br>
+      Si l'on était parti d'un autre entier naturel, en lui appliquant les mêmes règles, on aurait obtenu une suite de nombres différente.
+    </p>
+  </article>
+  <article class="a-conclusion">
+    <h3 class="subTitle" id="sub4">Conclusion</h3>
+    <p class="conclusion">
+      A priori, il serait possible que la suite de Syracuse de certaines valeurs de départ n'atteigne jamais la valeur 1, soit qu'elle aboutisse à un cycle différent du cycle trivial, soit qu'elle diverge vers l'infini. 
+      <br>
+      Or, on n'a jamais trouvé d'exemple de suite obtenue suivant les règles données qui n'aboutisse pas à 1, puis au cycle trivial.
+      <br><br>
+      En dépit de la simplicité de son énoncé, cette conjecture défie depuis de nombreuses années les mathématiciens. 
+      <br><br>
+      « les mathématiques ne sont pas encore prêtes pour de tels problèmes.» <span class="bolded">-Paul Erdős</span></p>
+    </p>
+  </article>
+</span>
+<a href="syracuse.html"><input type="submit" class="button1" value="Essayons" /></a>
 </body>
 </html>
