--- a/syracuse.html
+++ b/syracuse.html
@@ -14,7 +14,7 @@
   <form class="flex-item2">
       <label class="flex-item21" id="labelInput">Nombre de départ </label> <br>
       <input type="text" id="nbr" class="flex-item22"><br>
-      <input type="submit" onclick="syracuse()" value="C'est parti!" class="flex-item23" id="button">
+      <input type="submit" onclick="syracuse()" value="C'est parti" class="flex-item23" id="button">
       <br><br><br>
     </form>
     <table class="flex-item4" id="resTable">
