Readme Mis à jour
- DOM a réaliser en fonction de la réponse.

--- a/syracuse.html
+++ b/syracuse.html
@@ -27,6 +27,7 @@
       </thead>
       <tbody id="targetbodyRes">
       </tbody>
+    </table>
   <p id="resultat"class="flex-item3">La suite de Syracuse est donc : <br><span id="suite"></span></p>
   <p id="Ev'rybody Wants to Be a Cat" class="flex-itemCat"></p>
   <script src="js/func-tableauResultat.js"></script>
