--- a/cat.html
+++ b/cat.html
@@ -11,6 +11,14 @@
     <p class="catTitle">Votre récompense</p>
     <div id="catpic"></div>
     <p class="catsubTitle">Merci https://thecatapi.com/</p>
+    <p class="domListP">
+        Vous pouvez aussi consulter les differents DOM :
+        <ul class="domList">
+            <li><a href="DOM/page_index/DOM_index.drawio.html">DOM de index.html</a></li>
+            <li><a href="DOM/page_syracuse/DOM_syracuse.html">DOM de syracuse.html</a></li>
+            <li><a href="DOM/page_cat/cat.html">DOM de cat.html</a></li>
+        </ul>
+    </p>
 <script src="js/func-APIfetcher.js"></script>
 </body>
 </html>
