User input check
ValueChecker added.

--- a/syracuse.html
+++ b/syracuse.html
@@ -17,6 +17,7 @@
       <input type="submit" onclick="syracuse()" value="C'est parti" class="flex-item23" id="button">
       <br><br><br>
     </form>
+
     <table class="flex-item4" id="resTable">
       <caption>Resultat</caption>
       <thead>
@@ -30,6 +31,7 @@
     </table>
   <p id="resultat"class="flex-item3">La suite de Syracuse est donc : <br><span id="suite"></span></p>
   <p id="Ev'rybody Wants to Be a Cat" class="flex-itemCat"></p>
+  <script src="js/func-valueChecker.js"></script>
   <script src="js/func-tableauResultat.js"></script>
   <script src="js/func-syracuse.js"></script>
 </span>
