--- a/index.html
+++ b/index.html
@@ -14,28 +14,30 @@
     <h3 class="subTitle" id="sub1">Definition</h3>
     <p class="definition">La conjecture de Syracuse (ou problème 3x + 1), est l'hypothèse mathématique selon laquelle la suite de Syracuse de n'importe quel entier strictement positif atteint 1.</p>
   </article>
-  <article class="a-principes">
-    <h3 class="subTitle" id="sub2">Principes</h3>
-    <p class="principes">  
-      Une suite de Syracuse est une suite d'entiers naturels définie de la manière suivante : 
-      <ul class="principes">
-          <li>on part d'un nombre entier strictement positif</li>
-          <li>s’il est pair, on le divise par 2</li>
-          <li>s’il est impair, on le multiplie par 3 et l'on ajoute 1</li>
-          <li> En repetant l’opération, on obtient une suite d'entiers strictement positifs dont chacun ne dépend que de son prédécesseur.</li>
-      </ul>
-    </p>
-  </article >
-  <article class="a-exemples">
-    <h3 class="subTitle" id="sub3">Exemples</h3>
-    <p class="exemples">
-      Par exemple, la suite de Sirracuse du nombre 14 est : 14, 7, 22, 11, 34, 17, 52, 26, 13, 40, 20, 10, 5, 16, 8, 4, 2, 1, 4, 2…
-      <br><br>
-      Après que le nombre 1 a été atteint, la suite des valeurs 1, 4, 2, 1, 4, 2… se répète indéfiniment en un cycle de longueur 3, appelé <span class="bolded">cycle trivial.</span>
-      <br><br>
-      Si l'on était parti d'un autre entier naturel, en lui appliquant les mêmes règles, on aurait obtenu une suite de nombres différente.
-    </p>
-  </article>
+  <div class="panelwraper">
+    <article class="a-principes">
+      <h3 class="subTitle" id="sub2">Principes</h3>
+      <p class="principes">  
+        Une suite de Syracuse est une suite d'entiers naturels définie de la manière suivante : 
+        <ul class="principes">
+            <li>on part d'un nombre entier strictement positif</li>
+            <li>s’il est pair, on le divise par 2</li>
+            <li>s’il est impair, on le multiplie par 3 et l'on ajoute 1</li>
+            <li> En repetant l’opération, on obtient une suite d'entiers strictement positifs dont chacun ne dépend que de son prédécesseur.</li>
+        </ul>
+      </p>
+    </article >
+    <article class="a-exemples">
+      <h3 class="subTitle" id="sub3">Exemples</h3>
+      <p class="exemples">
+        Par exemple, la suite de Sirracuse du nombre 14 est : 14, 7, 22, 11, 34, 17, 52, 26, 13, 40, 20, 10, 5, 16, 8, 4, 2, 1, 4, 2…
+        <br><br>
+        Après que le nombre 1 a été atteint, la suite des valeurs 1, 4, 2, 1, 4, 2… se répète indéfiniment en un cycle de longueur 3, appelé <span class="bolded">cycle trivial.</span>
+        <br><br>
+        Si l'on était parti d'un autre entier naturel, en lui appliquant les mêmes règles, on aurait obtenu une suite de nombres différente.
+      </p>
+    </article>
+  </div>
   <article class="a-conclusion">
     <h3 class="subTitle" id="sub4">Conclusion</h3>
     <p class="conclusion">
@@ -49,6 +51,8 @@
     </p>
   </article>
 </span>
-<a href="syracuse.html"><input type="submit" class="button1" value="Essayons" /></a>
+<div class="buttonwrapper">
+  <a href="syracuse.html"><input type="submit" class="button1" value="Essayons" /></a>
+</div>
 </body>
 </html>
