--- a/cat.html
+++ b/cat.html
@@ -14,7 +14,7 @@
     <p class="domListP">
         Vous pouvez aussi consulter les differents DOM :
         <ul class="domList">
-            <li><a href="DOM/page_index/DOM_index.drawio.html">DOM de index.html</a></li>
+            <li><a href="DOM/page_index/DOM_index.html">DOM de index.html</a></li>
             <li><a href="DOM/page_syracuse/DOM_syracuse.html">DOM de syracuse.html</a></li>
             <li><a href="DOM/page_cat/cat.html">DOM de cat.html</a></li>
         </ul>
