Index.html panelwrapper adapated
CSS adapté pour que les panel ne debordent pas en responsive

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
   <div class="panelwraper">
     <article class="a-principes">
       <h3 class="subTitle" id="sub2">Principes</h3>
-      <p class="principes">  
+      <p class="principes" id="panelPrincipes">  
         Une suite de Syracuse est une suite d'entiers naturels définie de la manière suivante : 
-        <ul class="principes">
+        <ul class="principes" id="panelPrincipes">
             <li>on part d'un nombre entier strictement positif</li>
             <li>s’il est pair, on le divise par 2</li>
             <li>s’il est impair, on le multiplie par 3 et l'on ajoute 1</li>
@@ -29,7 +29,7 @@
     </article >
     <article class="a-exemples">
       <h3 class="subTitle" id="sub3">Exemples</h3>
-      <p class="exemples">
+      <p class="exemples" id="panelExemples">
         Par exemple, la suite de Sirracuse du nombre 14 est : 14, 7, 22, 11, 34, 17, 52, 26, 13, 40, 20, 10, 5, 16, 8, 4, 2, 1, 4, 2…
         <br><br>
         Après que le nombre 1 a été atteint, la suite des valeurs 1, 4, 2, 1, 4, 2… se répète indéfiniment en un cycle de longueur 3, appelé <span class="bolded">cycle trivial.</span>
