--- a/cat.html
+++ b/cat.html
@@ -19,6 +19,9 @@
             <li><a href="DOM/page_cat/cat.html">DOM de cat.html</a></li>
         </ul>
     </p>
+    <p>
+        Si vous voulez plus de jeux, visitez mon site : <a href="https://helldiver-strattrainer.com/">https://helldiver-strattrainer.com/</a>
+    </p>
 <script src="js/func-APIfetcher.js"></script>
 </body>
 </html>
